--- a/src/style/PerfilTatuador.module.css
+++ b/src/style/PerfilTatuador.module.css
@@ -1,50 +1,8 @@
-.container {
-	width: 96%;
-	height: 24vh;
-	box-sizing: border-box;
-	box-shadow: 0 4px beige;
+.cima {
+	background-image: url('/Tela6/Capa.png');
+	margin-bottom: 35%;
+	height: 193px;
+	background-size: cover;
 	display: flex;
-	border-radius: 12%;
-	padding: 6%;
-}
-
-.fotoPerfil {
-	/*clip-path: ellipse(40% 40% at 50% 50%);*/
-	border-radius: 50%;
-	position: absolute;
-	top: 10%;
-	left: 28%;
-	border: 6px solid white;
-}
-
-.container a {
-	margin-top: 8%;
-}
-
-.meio {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.informacoes {
-	text-align: center;
-	margin-top: 14%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 	justify-content: center;
 }
-
-.informacoes p {
-	width: 90%;
-}
-
-.icones {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-}
-
-
