comecar componente de portfolio

--- a/src/style/BalaoEstudio.module.css
+++ b/src/style/BalaoEstudio.module.css
@@ -2,6 +2,7 @@
 	background-image: url('/Tela6/fotoEstudio.png');
 	color: white;
 	height: 18vh;
+	width: 94%;
 	border-radius: 5%;
 	background-size: cover;
 	background-repeat: no-repeat;
